objects/PersonExamination.object
<CustomObject>
    <fields>
        <fullName>Access_DB_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Access DB External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>App_Type__c</fullName>
        <label>App Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Renew</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>License_No__c</fullName>
        <label>License No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_PersonExamination</fullName>
        <columns>Name</columns>
        <columns>Contact</columns>
        <columns>EffectiveFrom</columns>
        <columns>EffectiveTo</columns>
        <columns>License_No__c</columns>
        <columns>LastModifiedBy</columns>
        <columns>LastModifiedDate</columns>
        <filterScope>Everything</filterScope>
        <label>All Person Examinations</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>